repair segmentation failed on apache2

--- a/000-default.conf
+++ b/000-default.conf
@@ -17,6 +17,18 @@
 	# modules, e.g.
 	#LogLevel info ssl:warn
 
+	<Directory /var/www/php-mqtt-client>
+		Options Indexes FollowSymLinks MultiViews
+		AllowOverride All
+		Order allow,deny
+		allow from all
+	</Directory>
+
+	<FilesMatch \.php$>
+		# For Apache version 2.4.10 and above, use SetHandler to run PHP as a fastCGI process server
+		SetHandler "proxy:unix:/run/php/php7.4-fpm.sock|fcgi://localhost"
+	</FilesMatch>
+
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 
