--- a/supervisord.conf
+++ b/supervisord.conf
@@ -15,6 +15,15 @@ stopasgroup=true
 autorestart=false
 startretries=0
 
+[program:php-fpm]
+command=php-fpm7.4 -F
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+autorestart=false
+startretries=0
+
 [program:phpcliservices]
 command=sh /var/www/php-mqtt-client/mqtt-client-subs.sh
 stdout_logfile=/dev/stdout
