change supervisor.conf to restarting service automatically

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -12,8 +12,8 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 killasgroup=true
 stopasgroup=true
-autorestart=false
-startretries=0
+autorestart=true
+startretries=3
 
 [program:php-fpm]
 command=php-fpm7.4 -F
@@ -21,8 +21,8 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-autorestart=false
-startretries=0
+autorestart=true
+startretries=3
 
 [program:phpcliservices]
 command=sh /var/www/php-mqtt-client/mqtt-client-subs.sh
@@ -30,5 +30,5 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-autorestart=false
-startretries=0
+autorestart=true
+startretries=3
